// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentPackDetails /> should render with content pack 1`] = `
<ContentPackDetails
  constraints={Array []}
  contentPack={
    Object {
      "description": "Grok Patterns to extract informations from UFW logfiles",
      "entities": Array [],
      "id": "1",
      "name": "UFW Grok Patterns",
      "parameters": Array [],
      "rev": 1,
      "summary": "This is a summary",
      "url": "www.graylog.com",
      "v": 1,
      "vendor": "graylog.com",
    }
  }
  offset={1}
  showConstraints={false}
  verbose={false}
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <div
      className="row"
    >
      <Col
        bsClass="col"
        componentClass="div"
        sm={9}
        smOffset={1}
      >
        <div
          className="col-sm-9 col-sm-offset-1"
        >
          <div
            id="content-pack-details"
          >
            <h2>
              Details
            </h2>
            <br />
            <div>
              <dl
                className="deflist"
              >
                <dt>
                  Version:
                </dt>
                 
                <dd>
                  1
                </dd>
                <dt>
                  Name:
                </dt>
                 
                <dd>
                  UFW Grok Patterns
                   
                </dd>
                <dt>
                  Summary:
                </dt>
                 
                <dd>
                  This is a summary
                   
                </dd>
                <dt>
                  Vendor:
                </dt>
                 
                <dd>
                  graylog.com
                   
                </dd>
                <dt>
                  URL:
                </dt>
                 
                <dd>
                  <a
                    href="www.graylog.com"
                  >
                    www.graylog.com
                  </a>
                   
                </dd>
                <span>
                  <dt>
                    ID:
                  </dt>
                   
                  <dd>
                    <code>
                      1
                    </code>
                  </dd>
                </span>
                <span>
                  <dt>
                    Parameters:
                  </dt>
                   
                  <dd>
                    0
                  </dd>
                </span>
                <span>
                  <dt>
                    Entities:
                  </dt>
                   
                  <dd>
                    0
                  </dd>
                </span>
              </dl>
            </div>
            <div>
              <h2>
                Description
              </h2>
              <br />
              <Well>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "SIZES": Array [
                        "large",
                        "small",
                      ],
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Well-sc-19gs1oc-0",
                        "isStatic": false,
                        "lastClassName": "hnzchw",
                        "rules": Array [
                          [Function],
                        ],
                      },
                      "displayName": "Well",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Well-sc-19gs1oc-0",
                      "target": [Function],
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <Well
                    bsClass="well"
                    className="Well-sc-19gs1oc-0 hnzchw"
                  >
                    <div
                      className="Well-sc-19gs1oc-0 hnzchw well"
                    >
                      <div
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<p>Grok Patterns to extract informations from UFW logfiles</p>",
                          }
                        }
                      />
                    </div>
                  </Well>
                </StyledComponent>
              </Well>
            </div>
            <br />
            <br />
            <br />
          </div>
        </div>
      </Col>
    </div>
  </Row>
</ContentPackDetails>
`;

exports[`<ContentPackDetails /> should render with content pack without a description 1`] = `
<ContentPackDetails
  constraints={Array []}
  contentPack={
    Object {
      "entities": Array [],
      "id": "1",
      "parameters": Array [],
      "states": Array [
        "installed",
        "edited",
      ],
      "summary": "This is a summary",
      "title": "UFW Grok Patterns",
      "url": "www.graylog.com",
      "vendor": "graylog.com",
      "version": "1.0",
    }
  }
  offset={1}
  showConstraints={false}
  verbose={false}
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <div
      className="row"
    >
      <Col
        bsClass="col"
        componentClass="div"
        sm={9}
        smOffset={1}
      >
        <div
          className="col-sm-9 col-sm-offset-1"
        >
          <div
            id="content-pack-details"
          >
            <h2>
              Details
            </h2>
            <br />
            <div>
              <dl
                className="deflist"
              >
                <dt>
                  Version:
                </dt>
                 
                <dd />
                <dt>
                  Name:
                </dt>
                 
                <dd>
                   
                </dd>
                <dt>
                  Summary:
                </dt>
                 
                <dd>
                  This is a summary
                   
                </dd>
                <dt>
                  Vendor:
                </dt>
                 
                <dd>
                  graylog.com
                   
                </dd>
                <dt>
                  URL:
                </dt>
                 
                <dd>
                  <a
                    href="www.graylog.com"
                  >
                    www.graylog.com
                  </a>
                   
                </dd>
                <span>
                  <dt>
                    ID:
                  </dt>
                   
                  <dd>
                    <code>
                      1
                    </code>
                  </dd>
                </span>
                <span>
                  <dt>
                    Parameters:
                  </dt>
                   
                  <dd>
                    0
                  </dd>
                </span>
                <span>
                  <dt>
                    Entities:
                  </dt>
                   
                  <dd>
                    0
                  </dd>
                </span>
              </dl>
            </div>
            <br />
            <br />
            <br />
          </div>
        </div>
      </Col>
    </div>
  </Row>
</ContentPackDetails>
`;
